# minish

./: Cargo.toml
.cargo/: config.toml
src/: helpers.rs  io.rs  main.rs  shell.rs  start.rs  system.rs
src/io/: error.rs  ex.rs
